# fully-dynamic-maximal-matching

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
benchmarks/: bench_fdmm.py
docs/: architecture.md  audit_report.md  faq.md  getting-started.md  index.md  paper_restatement.md
examples/: example_basic.py  example_multilevel.py
fdmm/: __init__.py  dynamic_matching.py  edge_coloring.py  graph.py  types.py  z_system.py
scripts/: demo.py
src/fdmm/: __init__.py  accounting.py  cli.py  dynamic_matching.py  edge_coloring.py  graph.py  invariants.py  matching.py  parallel.py  simulation.py  types.py  updates.py  visualise.py  z_system.py
tests/: test_fdmm.py
